# glb-converter

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  README.md  railway.toml
cli_engine/: CMakeLists.txt  StepMetricsCli.cpp
web_step_metrics_app/: README.md  package.json  server.js
web_step_metrics_app/public/: app.js  style.css
